--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_GENIUS_ACCESS_TOKEN=your_genius_access_token
 VITE_YOUTUBE_API_KEY=your_youtube_api_key
+VITE_LASTFM_API_KEY=your_lastfm_api_key
