--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@react-spring/web": "^10.0.3",
     "@tailwindcss/typography": "^0.5.19",
+    "@use-gesture/react": "^10.3.1",
     "canvas-confetti": "^1.9.4",
     "firebase": "^12.7.0",
     "i18next": "^25.7.4",
