--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "preinstall": "npx only-allow pnpm",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -18,6 +19,7 @@
     "@use-gesture/react": "^10.3.1",
     "canvas-confetti": "^1.9.4",
     "firebase": "^12.7.0",
+    "framer-motion": "^11.15.0",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.562.0",
