test: add migration test scripts
- Add test-migration-node.ts for testing migration logic in Node.js
- Add test-migration.ts for browser environment (requires IndexedDB)
- Add test:migration npm script
- Verify UUID generation, timestamp injection, ID reference updates
- Test idempotency (same UUID on re-migration)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:migration": "tsx scripts/test-migration-node.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -57,6 +58,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
