feat(revenuecat): integrate RevenueCat for subscription management
- Add @revenuecat/purchases-capacitor package
- Create RevenueCatService with purchase, restore, and sync flows
- Auto-sync entitlements with EntitlementService on customer info change
- Handle web vs native platform detection gracefully
- Add comprehensive tests for both web and native scenarios

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/preferences": "^8.0.0",
     "@google/generative-ai": "^0.24.1",
     "@react-spring/web": "^10.0.3",
+    "@revenuecat/purchases-capacitor": "^12.0.5",
     "@tailwindcss/typography": "^0.5.19",
     "@use-gesture/react": "^10.3.1",
     "canvas-confetti": "^1.9.4",
